# SAIBO-framework

./: LICENSE  PROMPT_PROFILE.md  README-CN.md  README.md  pyproject.toml  requirements.txt
examples/: custom_evaluator.py  run_saibo_smoke.py  task_profile.example.json  wet_input.example.json
saibo/: __init__.py  backends.py  cli.py  runners.py  smoke.py
saibo/methods/labo/API/: __init__.py  llm_clients.py  llm_config_utils.py  vllm_model_config.py
saibo/methods/labo/koh/: __init__.py  acquisition.py  data_manager.py  decision.py  fusion.py  optimizer.py  utils.py
saibo/methods/labo/koh/models/: __init__.py  low_fidelity_gp.py  residual_gp.py  rho_manager.py
saibo/methods/labo/low_fidelity/: __init__.py  generator.py  predictor.py  prompt.py  warmup.py
saibo/methods/lgbo/: api_config.py  boo.py  decide.py  lgbo_core.py  llm_client.py  prior.py  prior_monte_carlo.py  prompt.py
saibo/methods/lgbo/fun/: toy_fun.py
