[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saibo"
version = "1.0.0"
description = "Scientific Artificial Intelligence Bayesian Optimization framework with LABO and LGBO backends."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "requests>=2.31",
  "torch",
  "gpytorch",
  "botorch",
]

[project.scripts]
saibo = "saibo.cli:main"

[tool.setuptools.packages.find]
include = ["saibo*"]
